Set up view controller. Tool bar does not work

--- a/460-tip-app/Base.lproj/Main.storyboard
+++ b/460-tip-app/Base.lproj/Main.storyboard
@@ -1,102 +1,57 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A388b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Mxn-cL-tWr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A388b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="r08-XY-lHk">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
         <!--Main Page-->
-        <scene sceneID="ufC-wZ-h7g">
+        <scene sceneID="fZq-kt-ROl">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="MainTipViewController" customModule="_60_tip_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="t9E-oh-Kmt" customClass="MainTipViewController" customModule="_60_tip_app" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
+                        <viewControllerLayoutGuide type="top" id="QSb-d6-DdT"/>
+                        <viewControllerLayoutGuide type="bottom" id="DEQ-TN-asV"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                    <view key="view" contentMode="scaleToFill" id="aFX-3I-d4Z">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DMg-vU-s3b">
+                                <rect key="frame" x="0.0" y="487" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="H9Y-iI-OID"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem title="Configuring fixed" width="275" style="plain" id="dMM-wC-fI4"/>
+                                    <barButtonItem title="Tailoring" width="226" style="plain" id="mV9-aI-2M2"/>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Main Page" id="Ffr-e5-la1"/>
+                    <navigationItem key="navigationItem" title="Main Page" id="sAb-x9-kxX"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qwj-TH-Pqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="988" y="318"/>
+            <point key="canvasLocation" x="517" y="365"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="AQg-QA-BG6">
+        <scene sceneID="Pdc-pS-Np3">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Mxn-cL-tWr" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="r08-XY-lHk" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZGA-mW-0kk">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="T8r-7r-1rP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="uQg-xI-hmh"/>
+                        <segue destination="t9E-oh-Kmt" kind="relationship" relationship="rootViewController" id="rff-fv-ZsG"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3rs-Uj-bEN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iBz-0W-r4g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="249" y="318"/>
-        </scene>
-        <!--Item 2-->
-        <scene sceneID="Vvo-yS-IdJ">
-            <objects>
-                <viewController id="lRJ-wI-4NE" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="JE8-qZ-m9a"/>
-                        <viewControllerLayoutGuide type="bottom" id="K3t-hH-8zX"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ijt-lC-knM">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="Xcp-8Z-qUe"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lFD-hz-qQH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="784" y="2067"/>
-        </scene>
-        <!--Item 1-->
-        <scene sceneID="CZf-0p-lNW">
-            <objects>
-                <viewController id="2Vy-fv-s4T" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="hvq-Hi-FE4"/>
-                        <viewControllerLayoutGuide type="bottom" id="ewx-ug-bdu"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="gio-qg-CcR">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="aWu-cD-q76"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xrj-r3-8Gv" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="784" y="1403"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="xsn-DN-jm1">
-            <objects>
-                <tabBarController id="5sM-XT-mKk" sceneMemberID="viewController">
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="vQn-AM-R6q">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="2Vy-fv-s4T" kind="relationship" relationship="viewControllers" id="mwh-VU-CaE"/>
-                        <segue destination="lRJ-wI-4NE" kind="relationship" relationship="viewControllers" id="kcZ-R2-92y"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="v4C-7L-EJI" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-32" y="1731"/>
+            <point key="canvasLocation" x="-295" y="365"/>
         </scene>
     </scenes>
 </document>
