--- a/460-tip-app/Base.lproj/Main.storyboard
+++ b/460-tip-app/Base.lproj/Main.storyboard
@@ -13,27 +13,70 @@
                         <viewControllerLayoutGuide type="bottom" id="DEQ-TN-asV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="aFX-3I-d4Z">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DMg-vU-s3b">
-                                <rect key="frame" x="0.0" y="487" width="600" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="H9Y-iI-OID"/>
-                                </constraints>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K79-u9-i41">
+                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <items>
-                                    <barButtonItem title="Configuring fixed" width="275" style="plain" id="dMM-wC-fI4"/>
-                                    <barButtonItem title="Tailoring" width="226" style="plain" id="mV9-aI-2M2"/>
+                                    <barButtonItem title="Item" id="d1D-vJ-903"/>
                                 </items>
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="K79-u9-i41" secondAttribute="trailing" id="AST-9J-OJt"/>
+                            <constraint firstItem="DEQ-TN-asV" firstAttribute="top" secondItem="K79-u9-i41" secondAttribute="bottom" id="QlH-wb-FTz"/>
+                            <constraint firstItem="K79-u9-i41" firstAttribute="width" secondItem="aFX-3I-d4Z" secondAttribute="width" id="ksN-02-TmG"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="AST-9J-OJt"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Main Page" id="sAb-x9-kxX"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qwj-TH-Pqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="517" y="365"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Orw-Cf-Nri">
+            <objects>
+                <viewController id="JHu-9b-n7p" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TuU-Gu-mQl"/>
+                        <viewControllerLayoutGuide type="bottom" id="GCQ-P9-631"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="H7V-wT-XNO">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kpH-ax-XsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="167" y="1195"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="LSm-qD-N60">
+            <objects>
+                <viewController id="1nh-xz-wkm" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gQT-x5-Maa"/>
+                        <viewControllerLayoutGuide type="bottom" id="iba-0b-Czi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HUw-ON-R98">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U8i-so-SL6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="927" y="1279"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Pdc-pS-Np3">
